[project]
name = "cloudrun-migration-sample"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shunsuke Tsumori", email = "tsumori.shunsuke@gmail.com" }
]
dependencies = [
    "sqlalchemy>=2.0.31",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cloudrun_migration_sample"]
